# OpenBrain

./: .gitignore  .prettierignore  COWORK_PROMPT.md  LICENSE  OVERNIGHT_LOG.md  PRD.md  PROJECT_STRUCTURE.md  README.md  eslint.config.mjs  package-lock.json  package.json  vitest.workspace.ts
.github/workflows/: ci.yml
apps/desktop/: .env.example  index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx  api.ts  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: debug_log.rs  importer.rs  lib.rs  main.rs  vault_persist.rs
apps/desktop/src-tauri/src/sync/: engine.rs
docs/: CLOUD_SETUP.md  MASTER_PLAN.md  OPENBRAIN_PRD.md  PRD.md  PROJECT_STRUCTURE.md  SESSION_CONTEXT.md  TECHNICAL_PLAN.md
docs/architecture/: TECHNICAL_PLAN.md
docs/project/: MASTER_PLAN.md  PROJECT_STRUCTURE.md  SESSION_CONTEXT.md
docs/setup/: CLOUD_SETUP.md
infra/: SETUP.md
infra/supabase/migrations/: 001_initial.sql  002_functions.sql  003_architect.sql  004_folders.sql  005_vector_search.sql  006_wiki.sql  007_url_ingestion.sql  008_sync_and_deleted.sql
scripts/: deploy.sh
services/architect-agent/: README.md  package.json  tsconfig.json  vitest.config.ts
services/friday-cron/: .env.example  README.md  linker.test.ts  linker.ts  package.json  tagger.test.ts  tagger.ts  tsconfig.json  vitest.config.ts
services/worker/: .env.example  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
services/worker/src/: index.ts
(+57 files in other folders)
